--- a/src/main/resources/templates/devops.html
+++ b/src/main/resources/templates/devops.html
@@ -23,7 +23,7 @@
 	<nav class="navbar navbar-light bg-info">
 		<div class="container">
 			<div class="navbar-header">
-				<h2>Learn CI/CD at Ez2learn Cloud</h2>
+				<h2>Learn CI/CD at Ez2Learn Cloud</h2>
 			</div>
 		</div>
 	</nav>
